[workspace]
members = [
    "user-service",
    "task-service",
    "notification-service",
    "api-gateway"
]
resolver = "2" # Ensures proper dependency resolution

[workspace.dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
jsonwebtoken = "9"
