[workspace]
members = [
    "user_service",
    "task_service",
    "notification_service",
    "api_gateway"
]
resolver = "2" # Ensures proper dependency resolution

[workspace.dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
jsonwebtoken = "9"
dotenvy = "0.15"
